--- a/config/questions.yml
+++ b/config/questions.yml
@@ -1,9 +1,9 @@
 staying_independent:
   title: I want to make sure I can stay independent at home
-  hint: There are lots of things that you can do to make sure that you stay independent within your own home.
+  hint: Ways to help you enjoy independent living for longer
   steps:
     -
-      title: Can you choose the statements that apply to you?
+      title: Thanks. You chose staying independent. Can you now tick any of these statements that apply to you
       hint: You can choose more than one
       name: 'help_category'
       answers:
@@ -11,14 +11,14 @@ staying_independent:
           value: avoid_accidents
         - title: I want to adapt my home to suit my needs
           value: apapt_home
-        - title: I want to find some ways to keep fit and active
-          value: fit_active
+        - title: I want to find out about technology for independent living (like alarms and sensors)
+          value: tech
     -
-      title: What kind of information are you looking for?
-      hint: Again, you can choose more than one
+      title: Great. And what kind of help are you looking for?
+      hint: Again, you can choose as many as you like
       name: info_type
       answers:
-        - title: I want to see information and advice that I look at myself
+        - title: I want to see information and advice that I can look at myself
           value: myself
         - title: I want to see some types of gadgets and equipment that can help me
           value: equipment
@@ -37,10 +37,10 @@ staying_independent:
           value: help_with_payment
 everyday_tasks:
   title: I need some help with everyday tasks (like cleaning or shopping)
-  hint: Some hint text goes here
+  hint: Information, equipment and services to help you every day
   steps:
     -
-      title: Can you choose the statements that apply to you?
+      title: Thanks. You chose help with everyday tasks. Can you now tick any of these statements that apply to you
       hint: You can choose more than one
       name: 'help_category'
       answers:
@@ -51,11 +51,11 @@ everyday_tasks:
         - title: I'd like some help with cleaning, housework and home repairs
           value: housework
     -
-      title: What kind of information are you looking for?
-      hint: Again, you can choose more than one
+      title: Great. And what kind of help are you looking for?
+      hint: Again, you can choose as many as you like
       name: info_type
       answers:
-        - title: I want to see information and advice that I look at myself
+        - title: I want to see information and advice that I can look at myself
           value: myself
         - title: I want to see some types of gadgets and equipment that can help me
           value: equipment
@@ -74,10 +74,10 @@ everyday_tasks:
           value: help_with_payment
 out_and_about:
   title: I want to get out and about easier
-  hint: Some hint text goes here
+  hint: From mobility aids to transportation - how to keep mobile
   steps:
     -
-      title: Can you choose the statements that apply to you?
+      title: Thanks. You chose getting out and about. Can you now tick any of these statements that apply to you
       hint: You can choose more than one
       name: 'help_category'
       answers:
@@ -86,11 +86,11 @@ out_and_about:
         - title: I want to know more about transportation services
           value: transportation
     -
-      title: What kind of information are you looking for?
-      hint: Again, you can choose more than one
+      title: Great. And what kind of help are you looking for?
+      hint: Again, you can choose as many as you like
       name: info_type
       answers:
-        - title: I want to see information and advice that I look at myself
+        - title: I want to see information and advice that I can look at myself
           value: myself
         - title: I want to see some types of gadgets and equipment that can help me
           value: equipment
@@ -98,21 +98,12 @@ out_and_about:
           value: professional
         - title: I want to see activities and groups in my local areas
           value: activities_and_groups
-    -
-      title: What payment options are you interested in seeing?
-      hint: Again, you can choose more than one
-      name: payment_options
-      answers:
-        - title: I am happy to pay for things myself
-          value: pay_myself
-        - title: I'd like to see some options for help with payment
-          value: help_with_payment
 fitness:
   title: I want to keep physically and mentally fit
-  hint: Some hint text goes here
+  hint: Activities to keep active and lift your mood
   steps:
     -
-      title: Can you choose the statements that apply to you?
+      title: Thanks. You chose keeping mentally and physically well. Can you now tick any of these statements that apply to you
       hint: You can choose more than one
       name: 'help_category'
       answers:
@@ -121,11 +112,11 @@ fitness:
         - title: I want to socialise more and keep mentally fit
           value: socialise
     -
-      title: What kind of information are you looking for?
-      hint: Again, you can choose more than one
+      title: Great. And what kind of help are you looking for?
+      hint: Again, you can choose as many as you like
       name: info_type
       answers:
-        - title: I want to see information and advice that I look at myself
+        - title: I want to see information and advice that I can look at myself
           value: myself
         - title: I want to see some types of gadgets and equipment that can help me
           value: equipment
