--- a/config/results.yml
+++ b/config/results.yml
@@ -11,7 +11,7 @@ avoid_accidents: # help_category
         - organise your home so that climbing, stretching and bending are kept to a minimum, and to avoid bumping into things
         - try not to walk on slippery floors in socks or tights
         - wear well-fitting shoes that are in good condition and support the ankle.
-        - takie care of your feet by trimming your toenails regularly and seeing a GP or chiropodist about any foot problems
+        - take care of your feet by trimming your toenails regularly and seeing a GP or chiropodist about any foot problems
     - type: paragraph
       content: "NHS Choices has more information on how to prevent accidents in your home:"
     - type: link
